--- a/paginas/covid19.html
+++ b/paginas/covid19.html
@@ -1,7 +1,7 @@
 <html lang="es">
     <head>
         <title>INICIO | MANUEL TURIZO</title>
-        <link rel="shortcut icon" href="../Img/ICONO.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="../images/inkafarma.png" type="image/x-icon">
         <link rel="stylesheet" href="../css/covid.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
