subida del proyecto

--- a/paginas/covid19.html
+++ b/paginas/covid19.html
@@ -36,7 +36,7 @@
             </section>    
             <section class="galeria">
                 <div class="contenedor">
-                    <p><h2 class="titulo">Para evitar la propagación de la COVID-19:</h2></p>
+                    <p><h2 class="titulo">Para evitar la propagacion de la COVID-19:</h2></p>
                     <div class="galeria-fot">
                         <div class="imagen-fot">
                             <img src="../images/covid-19/ONE.jpg" alt="">
