subida del proyecto

--- a/paginas/covid19.html
+++ b/paginas/covid19.html
@@ -1,6 +1,6 @@
 <html lang="es">
     <head>
-        <title>INICIO | MANUEL TURIZO</title>
+        <title>Inkafarma:Mas salud al mejor precio</title>
         <link rel="shortcut icon" href="../images/inkafarma.png" type="image/x-icon">
         <link rel="stylesheet" href="../css/covid.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
